--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -14,7 +14,7 @@
   <ul>
     <li><%= link_to("我的朋友", user_friend_relations_path(user))%></li>
     <li><%= link_to("朋友邀请", friend_invitations_path)%></li>
-    <li><%= link_to("邀请朋友加入", invite_users_path)%></li>
+    <li><%= link_to("邀请朋友使用WeFootball", invite_users_path)%></li>
   </ul>
   <ul>
     <li><%= link_to("我的球队", user_team_joins_path(user))%></li>
