--- a/app/views/sidebar_menus/_user_view_friend.html.erb
+++ b/app/views/sidebar_menus/_user_view_friend.html.erb
@@ -7,7 +7,7 @@
       > <%= link_to '朋友邀请', friend_invitations_path %>
     </li>
     <li <%= selected_class_sidebar_menu_item(:action=>'invite', :controller=>'users')%>>
-      > <%= link_to '邀请朋友加入WeFootball', invite_users_path %>
+      > <%= link_to '邀请朋友使用WeFootball', invite_users_path %>
     </li>
   <%end%>
   <li class='seperate'>
