--- a/app/views/users/invite.html.erb
+++ b/app/views/users/invite.html.erb
@@ -1,11 +1,13 @@
+<%if @has_joined_notice%>
+<div class="flash">
+  <%=h @user.login %>已经在WeFootball注册<br />
+  <%=link_to "点击这里, 进入#{h @user.login}的个人主页", user_view_path(@has_joined_user_id)%>
+</div>
+<%end%>
+
 <div id="wide_left_content" class="sect">
   <h2>邀请你的朋友使用WeFootball</h2>
   <%= error_messages_for :register_invitation %>
-
-  <%if @has_joined_notice%>
-    <%=@has_joined_notice%><br />
-    其个人主页在<%=link_to '这里',user_view_path(@has_joined_user_id)%>
-  <%end%>
 
   <% form_for @register_invitation, :url=>invite_users_path do |f| -%>
 
