--- a/app/views/layouts/_search_panel.html.erb
+++ b/app/views/layouts/_search_panel.html.erb
@@ -1,5 +1,5 @@
-<% team_img = image_tag('teamIcon.gif', :title=>'') 
-   user_img = image_tag('peopleIcon.gif', :title=>'')
+<% team_img = image_tag('teamIcon.gif', :title=>'搜索球队') 
+   user_img = image_tag('peopleIcon.gif', :title=>'搜索用户')
   search_paths = {
   :user => 
     {:image => user_img,
