--- a/app/views/match_invitations/index_need_reply.html.erb
+++ b/app/views/match_invitations/index_need_reply.html.erb
@@ -37,7 +37,7 @@
             <%end%>
           </table>
           <br/>
-          <%= render :partial => 'properties_list', :locals => {:mi => mi}%>
+          <%= render :partial => 'properties_list', :locals => {:mi => mi, :need_reply => true}%>
 
           <div style="margin: 10px 0 10px 10px">
             <%links = []%>
