--- a/app/views/match_invitations/index_waiting_for_reply.html.erb
+++ b/app/views/match_invitations/index_waiting_for_reply.html.erb
@@ -37,7 +37,7 @@
           <%end%>
           </table>
           <br/>
-          <%= render :partial => 'properties_list', :locals => {:mi => mi}%>
+          <%= render :partial => 'properties_list', :locals => {:mi => mi, :need_reply => false}%>
           <br/>
         </td>
         <td><%= team_icon(another_team)%></td>
