--- a/app/views/layouts/_match_menu.html.erb
+++ b/app/views/layouts/_match_menu.html.erb
@@ -20,7 +20,7 @@
       <%end%>
     </ul>
     <ul>
-      <li><%= link_to("参加的成员", '#')%></li>
+      <li><%= link_to("参加的成员", joined_users_match_path(match.id,:team_id=>match.guest_team_id))%></li>
       <li><%= link_to '讨论',  match_team_posts_path(match, match.guest_team_id) %></li>
       <%if logged_in? %>
         <%if match.can_be_edited_formation_by?(current_user, match.guest_team_id)%>
