--- a/app/views/layouts/team_layout.html.erb
+++ b/app/views/layouts/team_layout.html.erb
@@ -15,22 +15,23 @@
 <body>
 <%= render(:partial => 'layouts/qmd')%>
 <div id="main_content">
-<div id="header">
-  <%= link_to team_image_tag(@team), team_view_path(@team), :id=>"header_icon" %>
-  <%= link_to h(@team.shortname), team_view_path(@team), :id=>"header_name"%>
+  <div id="header">
+    <%= link_to team_image_tag(@team), team_view_path(@team), :id=>"header_icon" %>
+    <%= link_to h(@team.shortname), team_view_path(@team), :id=>"header_name"%>
 
-  <%= render(:partial => 'layouts/header_setting')%>
-  <%= render(:partial => 'layouts/team_menu', :locals => {:team => @team})%>
-  
-  <%= render(:partial => 'layouts/search_panel', :locals => {:default => :team})%>
-</div>
+    <%= render(:partial => 'layouts/header_setting')%>
+    <%= render(:partial => 'layouts/team_menu', :locals => {:team => @team})%>
 
-<div id="content">
-  <%if flash[:notice]%>
-    <div class="flash"><%= flash[:notice] %></div>
-  <%end%>
-  <%= yield  %>
+    <%= render(:partial => 'layouts/search_panel', :locals => {:default => :team})%>
+  </div>
+
+  <div id="content">
+    <%if flash[:notice]%>
+      <div class="flash"><%= flash[:notice] %></div>
+    <%end%>
+    <%= yield  %>
+  </div>
 </div>
-</div>
+<%= render(:partial => 'layouts/footer')%>
 </body>
 </html>
