--- a/app/views/user_mailer/invite_notification.html.erb
+++ b/app/views/user_mailer/invite_notification.html.erb
@@ -1,6 +1,8 @@
 <%=h @host.nickname%>邀请您使用WeFootball
 
-这里是<%=@host.nickname%>给你的留言:<%=h @invitation.message%>
+<%if !@message.blank?%>
+  这里是<%=@host.nickname%>给你的留言:<%=h @message%>
+<%end%>
 
 <%=h @host.nickname%>的WeFootball的页面为: <%=@host_url%>
 
