--- a/app/views/users/invite.html.erb
+++ b/app/views/users/invite.html.erb
@@ -1,7 +1,7 @@
 <%if @has_joined_notice%>
 <div class="flash">
-  <%=h @user.login %>已经在WeFootball注册<br />
-  <%=link_to "点击这里, 进入#{h @user.login}的个人主页", user_view_path(@has_joined_user_id)%>
+  <%=h @has_joined_user.login %>已经在WeFootball注册<br />
+  <%=link_to "点击这里, 进入#{h @has_joined_user.login}的个人主页", user_view_path(@has_joined_user_id)%>
 </div>
 <%end%>
 
@@ -15,7 +15,7 @@
   <%= f.text_field :login %></p>
 
   <p><label for="message">留言(可选)</label><br/>
-  <%= f.text_area :message, :cols => 40, :rows => 3  %></p>
+  <%= text_area_tag :message, nil, :cols => 40, :rows => 3  %></p>
 
   <p><%= submit_tag '邀请' %></p>
   <% end -%>
