--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,12 @@
 <div id="footer">
+  <span class="arrd">
   © 2008 WeFootball.org, All Rights Reserved
+  </span>
+  <span class="links">
+  <a href="http://blog.wefootball.org">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <%= link_to '站务论坛', site_posts_path %>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <a href="#">隐私声明</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <a href="#">帮助</a>
+  </span>
+  <div class="clearBoth"></div>
 </div>
