--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -25,7 +25,7 @@
       <div class="clearBoth"></div>
     </div>
     <%if logged_in?%> 
-      <div style="float:right">
+      <div class="control">
         <%links = []%>
         <%if @training.can_be_modified_by?(current_user)%>
           <%links << "#{link_to '修改', edit_training_path(@training)}"%>
