--- a/app/views/matches/_result_form.html.erb
+++ b/app/views/matches/_result_form.html.erb
@@ -15,59 +15,86 @@ else
   situtaion_sym = :situation_by_guest
   situation_by_another_team = @match.situation_by_host
 end%>
+
+<%
+goal_checked = true
+sit_checked = false
+dnc_checked = false
+
+if !@match[host_team_goal_sym].blank? || !@match[guest_team_goal_sym].blank?
+  goal_checked = true
+  sit_checked = false
+  dnc_checked = false
+elsif !@match[situtaion_sym].blank?
+    if @match[situtaion_sym] == 1
+        goal_checked = false
+        sit_checked = false
+        dnc_checked = true
+    else
+        goal_checked = false
+        sit_checked = true
+        dnc_checked = false
+    end
+end%>
+
+<%fill_result_link = nil%>
+
 <div class="result_input">
-  <div class="goal_input">
-    填写比分: &nbsp;&nbsp;> <a class="switch" href="javascript:void(0)">没有详细比分, 填写赛况</a><br />
-    
+  <%if !host_team_goal_by_another_team.blank? || !guest_team_goal_by_another_team.blank?%>
     <div class="result_block">
-      <div style="margin: 10px 0">
+    <p>
+      对方填写的比分: 
+      <%if !host_team_goal_by_another_team.nil?%>
         <%=@match.host_team.shortname%>
-        <%= f.text_field host_team_goal_sym, :maxlength => 2, :size=>1 %>
-        :
-        <%= f.text_field guest_team_goal_sym, :maxlength => 2, :size=>1 %>
-        <%=@match.guest_team.shortname%>
-      </div>
-
-      <%if !host_team_goal_by_another_team.nil? || !guest_team_goal_by_another_team.nil?%>
-        <p>
-          对方填写的比分: <br/>
-          <%if !host_team_goal_by_another_team.nil?%>
-            <%=@match.host_team.shortname%>
-            <span class="another_result"><%=host_team_goal_by_another_team%></span>
-          <%end%>
-
-          <%=':' if !host_team_goal_by_another_team.nil? && !guest_team_goal_by_another_team.nil?%>
-
-          <%if !guest_team_goal_by_another_team.nil?%>
-            <% if host_team_goal_by_another_team.nil?%>
-              <%= @match.guest_team.shortname %>
-              <span class="another_result"><%= guest_team_goal_by_another_team%></span>
-            <%else%>
-              <span class="another_result"><%= guest_team_goal_by_another_team%></span>
-              <%= @match.guest_team.shortname %>
-            <%end%>
-          <%end%>&nbsp;&nbsp;
-          > <a class="fill_result" id='goal-<%=host_team_goal_by_another_team%>-<%=guest_team_goal_by_another_team%>' href="javascript:void(0)">认可对方填写的比分</a>
-        </p>
+        <span class="another_result"><%=host_team_goal_by_another_team%></span>
       <%end%>
-    </div>
-  </div>
-  <div class="situation_input">
-    填写赛况: &nbsp;&nbsp;> <a class="switch" href="javascript:void(0)">填写比分</a><br />
-    
-    <div class="result_block">
-      <p>
-        <%= f.radio_button(situtaion_sym,Match::SITUATIONS[0], :checked => true)%><%=situation_text(Match::SITUATIONS[0])%><br />
-        <%for s in Match::SITUATIONS[1..-1]%>
-          <%= f.radio_button(situtaion_sym, s)%><%=situation_text(s)%>
+
+      <%=':' if !host_team_goal_by_another_team.nil? && !guest_team_goal_by_another_team.nil?%>
+
+      <%if !guest_team_goal_by_another_team.nil?%>
+        <% if host_team_goal_by_another_team.nil?%>
+          <%= @match.guest_team.shortname %>
+          <span class="another_result"><%= guest_team_goal_by_another_team%></span>
+        <%else%>
+          <span class="another_result"><%= guest_team_goal_by_another_team%></span>
+          <%= @match.guest_team.shortname %>
         <%end%>
-      </p>
-      <%if !situation_by_another_team.nil?%>
-        <p>
-          对方填写的赛况: <span class="another_result"><%=situation_text situation_by_another_team%></span>
-          > <a class="fill_result" id='situation-<%=situation_by_another_team%>' href="javascript:void(0)">认可对方填写的赛况</a>
-        </p>
-      <%end%>
+      <%end%>&nbsp;&nbsp;
+      <%fill_result_link = "> <a class='fill_result' id='goal-#{host_team_goal_by_another_team}-#{guest_team_goal_by_another_team}' href='javascript:void(0)'>认可对方填写的比分</a>"%>
+    </p>
     </div>
+  <%elsif !situation_by_another_team.blank?%>
+    <div class="result_block">
+    <p>
+      对方填写的赛况: <span class="another_result"><%=situation_text situation_by_another_team%></span>
+      <%fill_result_link = "> <a class='fill_result' id='situation-#{situation_by_another_team}' href='javascript:void(0)'>认可对方填写的赛况</a>"%>
+    </p>
+    </div>
+  <%end%>
+  <br/>
+  <input type="radio" class="goal_input_switch switch" value="goal" name="result_type" <%= 'checked' if goal_checked%>>填写具体比分</input>
+  <input type="radio" class="situation_input_switch switch" value="situation" name="result_type" <%= 'checked' if sit_checked%>>填写赛况</input>
+  <input type="radio" class="donotcare_input_switch switch" value="donotcare" name="result_type" <%= 'checked' if dnc_checked%>>比赛结果无所谓</input>
+  &nbsp;&nbsp;<%= fill_result_link if !fill_result_link.nil? %>
+  <br/><br/>
+  <div class="goal_input result_block">
+    <div style="margin: 10px 0">
+      <%=@match.host_team.shortname%>
+      <%= f.text_field host_team_goal_sym, :maxlength => 2, :size=>1 %>
+      :
+      <%= f.text_field guest_team_goal_sym, :maxlength => 2, :size=>1 %>
+      <%=@match.guest_team.shortname%>
+    </div>
+
+    <%if !host_team_goal_by_another_team.nil? || !guest_team_goal_by_another_team.nil?%>
+      
+    <%end%>
+  </div>
+  <div class="situation_input result_block">
+    <p>
+      <%for s in Match::SITUATIONS[1..-1]%>
+        <%= f.radio_button(situtaion_sym, s)%><%=situation_text(s)%>
+      <%end%>
+    </p>
   </div>
 </div>
