--- a/app/views/matches/_team_in_match.erb
+++ b/app/views/matches/_team_in_match.erb
@@ -1,29 +1,4 @@
 <div class="sect">
-  <h2><%=h team.shortname%></h2>
-  <%= small_team_image_link team, :class=>'icon title_icon'%>
-  <div class="info">
-    <%links = []%>
-    <%if logged_in? && current_user.is_team_member_of?(team)%>
-      <%links << link_to("编辑阵型", edit_match_join_path(0, :match_id=>match.id, :team_id=>team.id)) if @match.can_be_edited_formation_by?(current_user, team)%>
-      <%links << link_to("填写比赛结果", edit_team_match_path(team, match)) if @match.can_be_edited_result_by?(current_user, team)%>
-      <%links << link_to("取消比赛", match_path(@match), :method => :delete, :confirm => '真的要取消这场比赛吗？') if @match.can_be_destroyed_by?(current_user)%>
-      <%= links_with_sticks links%>
-      <%= "<br/><br/>" if links.length > 0 %>
-      <%= match_join_status_text @match, team, '该队'%>
-      <br/>
-      <% links_text = match_join_status_links @match, team%>
-      <%links = []%>
-      <%links << link_to(links_text[0], 
-          match_joins_path(:team_id => team, :match_id => @match), :method=>:post) if @match.can_be_joined_by?(current_user, team)%>
-      <%links << link_to(links_text[1], 
-          match_join_path(0, :team_id => team, :match_id => @match), :method=>:delete) if @match.can_be_quited_by?(current_user, team)%>
-      <%= links_with_sticks links%>
-    <%end%>
-  </div>
-  <div class="clearBoth"></div>
-</div>
-
-<div class="sect">
   <h2>首发名单</h2>
   <table class="list player_list">
     <tr>
@@ -38,8 +13,7 @@
         <td style="width:60px"><%= formation_position_text ut.position %></td>
       </tr>
     <%end%>
-    <% tmp_user = User.new%>
-    <%(match.size - team_player_mjs.size).times do%>
+    <%(@match.size - team_player_mjs.size).times do%>
      <tr>
         <td>&nbsp;</td>
         <td style="width:80px">尚未选定</td>
