--- a/public/stylesheets/match.css
+++ b/public/stylesheets/match.css
@@ -2,65 +2,55 @@
     position: relative;
 }
 
-#match_blackboard {
-    position: absolute;
-    left: 250px;
-    width: 450px;
-    margin-top: -50px;
-    text-align: center;
+div.rule {
+  line-height: 150%;
 }
 
-#match_blackboard div.host_result,
-#match_blackboard div.guest_result{
-  width: 190px;
-  height:100%;
-/*  border: 1px solid #333333;*/
-  padding: 5px
+div.rule span{
+  color: #666;
 }
 
-#match_blackboard div.host_result {
-  float:left;
-  padding-left:20px;
-  text-align: right;
-}
-
-#match_blackboard div.guest_result{
-  float:right;
+div.rule td{
   padding-right: 20px;
-  text-align: left;
 }
 
-table.goal_list{
-  width: 100%;
-}
-
-table.goal_list td img.icon{
-  width:22px;
-  height:22px;
-}
-
-#host_team_div { 
+div.host_team_div { 
     float: left;
     width: 465px;
 }
 
-#guest_team_div {
+div.guest_team_div {
     float: right;
     margin-right: 15px;  
     width: 465px;
     text-align: right;
 }
 
-#host_team_div img.title_icon,
-#host_team_div div.info{
+div.host_team_div img.title_icon,
+div.host_team_div div.info{
     float: left;
     margin-right: 20px;
 }
 
-#guest_team_div div.info,
-#guest_team_div img.title_icon{
+div.guest_team_div div.info,
+div.guest_team_div img.title_icon{
     float: right;
-    margin-left: 20px;
+    margin-left: 20px; 
+}
+
+#match_blackboard {
+  float: left;
+  width: 430px;
+  text-align: center;
+  font-size: 48px;
+  line-height: 60px;
+  color: #7E3E0B;
+  font-family: Georgia,"Times New Roman",Times,serif;
+}
+
+#match_blackboard img{
+  padding: 2px;
+  border:solid 1px #3D681A;
 }
 
 table.player_list {
@@ -72,25 +62,25 @@ table.player_list td img.icon{
   height:22px;
 }
 
-#host_team_div .player_list{
+div.host_team_div .player_list{
   margin:0 5px 0 0;
   float:left;
 }
 
-#host_team_div .small_field {
+div.host_team_div .small_field {
   margin:25px 0 0 0;
   float:left;
 }
 
-#guest_team_div .player_list {
+div.guest_team_div .player_list {
   float:right;
 }
 
-#guest_team_div .small_field {
+div.guest_team_div .small_field {
   margin:25px 5px 0 0;
   float:right;
 }
 
-#guest_team_div table {
+div.guest_team_div table {
     text-align: left;
 }
